<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.dante.springboot</groupId>
	<artifactId>springboot-parent</artifactId>
	<version>1.0</version>
	<packaging>pom</packaging>
	<name>springboot-parent</name>
	<description>Dante Springboot Parent</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<project.version>1.0.0</project.version>
		<java.version>21</java.version>
		<guava.version>33.4.8-jre</guava.version>
		<fastjson.version>2.0.57</fastjson.version>
		<hutool.version>5.8.38</hutool.version>
	</properties>

	<modules>
		<module>springboot-admin-server</module>
		<module>springboot-admin-client</module>
        <module>springboot-empty-shelf</module>
		<module>springboot-ldap</module>
		<module>springboot-cache</module>
		<module>springboot-docker</module>
		<module>springboot-logger</module>
		<module>springboot-log4j2</module>
		<module>springboot-log4j</module>
		<module>springboot-aoplog</module>
		<module>springboot-log-desensitization</module>
		<module>springboot-scheduling</module>
		<module>springboot-scheduling-dynamic</module>
		<module>springboot-quartz</module>
		<module>springboot-async</module>
		<module>springboot-openapi3-knife4j</module>
		<module>springboot-mybatis</module>
		<module>springboot-mybatis-multi-datasource</module>
		<module>springboot-mybatis-plus</module>
		<module>springboot-mybatis-flex</module>
		<module>springboot-jwt-server</module>
		<module>springboot-batch</module>
		<module>springboot-ssl</module>
		<module>springboot-druid</module>
		<module>springboot-druid-multi-datasource</module>
		<module>springboot-hikaricp</module>
		<module>springboot-statemachine</module>
		<module>springboot-data-redis</module>
		<module>springboot-data-mongo</module>
		<module>springboot-mongodb-upload</module>
		<module>springboot-jasypt</module>
		<module>springboot-data-jpa</module>
		<module>springboot-jdbc</module>
		<module>springboot-ws-server</module>
		<module>springboot-ws-client</module>
		<module>springboot-poi</module>
		<module>springboot-office</module>
		<module>springboot-email</module>
		<module>springboot-rabbitmq-producer</module>
		<module>springboot-rabbitmq-consumer</module>
		<module>springboot-kafka-producer</module>
		<module>springboot-kafka-consumer</module>
		<module>springboot-websocket</module>
		<module>springboot-freemarker</module>
		<module>springboot-allatori</module>
		<module>springboot-webflux</module>
		<module>springboot-i18n</module>
		<module>springboot-jaeger</module>
		<module>springboot-ftp</module>
		<module>springboot-flyway</module>
		<module>springboot-tomcatlog</module>
		<module>springboot-prometheus</module>
		<module>springboot-testng</module>
		<module>springboot-testng-api</module>
		<module>springboot-sharding-jdbc</module>
		<module>springboot-sharding-proxy</module>
		<module>springboot-mock</module>
		<module>springboot-zookeeper</module>
		<module>springboot-qrcode</module>
		<module>springboot-retrofit</module>
		<module>springboot-fileupload</module>
		<module>springboot-maven-multienvconfig</module>
		<module>springboot-xxl-job</module>
		<module>springboot-powerjob</module>
		<module>springboot-richtext</module>
		<module>springboot-fastexcel</module>
		<module>springboot-resilience4j-common</module>
		<module>springboot-resilience4j-server</module>
		<module>springboot-resilience4j-client</module>
		<module>springboot-flowable-design</module>
		<module>springboot-camunda</module>
		<module>springboot-liteflow</module>
        <module>springboot-jimureport</module>
		<module>springboot-postgresql</module>
		<module>springboot-camel</module>
        <module>springboot-retry</module>
        <module>springboot-db-doc</module>
        <module>springboot-svn</module>
        <module>springboot-ai-baidu</module>
        <module>springboot-sso</module>
        <module>springboot-snmp</module>
        <module>springboot-jnetpcap</module>
        <module>springboot-disruptor</module>
        <module>springboot-less-jar</module>
        <module>springboot-rsocket</module>
        <module>springboot-graphql</module>
        <module>springboot-special-tool</module>
        <module>springboot-dyna-datasource</module>
        <module>springboot-smartdoc-apifox</module>
        <module>springboot-easypoi</module>
        <module>springboot-payment</module>
        <module>springboot-dameng</module>
        <module>springboot-clickhouse</module>
        <module>springboot-sms4j</module>
        <module>springboot-magic-api</module>
        <module>springboot-opencv</module>
        <module>springboot-google-auth</module>
        <module>springboot-jsr-303</module>
        <module>springboot-x-file-storage</module>
        <module>springboot-element-ui-api</module>
	</modules>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.7</version>
	</parent>

	<dependencies>
		<dependency>
		    <groupId>cn.hutool</groupId>
    		<artifactId>hutool-all</artifactId>
		    <version>${hutool.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>${guava.version}</version>
		</dependency>
		<dependency>
			<groupId>com.alibaba.fastjson2</groupId>
			<artifactId>fastjson2</artifactId>
			<version>${fastjson.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>
	
	<build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
